Install Bootstrap Gem

--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -1,2 +1,2 @@
-<h1>This is the contact us page</h1>
+<h1>Contact Me Here</h1>
 <p>If you need to find anyway to contact me, you would find it here!</p>
